GS-10226 1. define more memory for tests 2. add javadoc plugin (is not invoked by default)
svn path=/xap/trunk/openspaces/; revision=132403


Former-commit-id: 25516bf88562ddfada4fe4677ffccc93dfe6f4f9